📦 Add Web Build & Update .gitignore
✅ ADDED:
- build/web/ - Web version (HTML5 via Pygbag)
  * index.html (13KB) - Ready to deploy!
  * mini-project.apk (20KB) - Pygbag archive
  * favicon.png
- build/version.txt
- build/web-cache/*.tmpl

✅ UPDATED .gitignore:
- Allow build/ folder (for web builds)
- Allow dist/ folder (for releases)
- Ignore large binaries (*.exe, *.pkg, *.pyz > 10MB)
- Keep web builds for easy deployment

🌐 WEB BUILD READY:
Open build/web/index.html in browser or deploy to:
- GitHub Pages
- Netlify
- Vercel
- Any static hosting

📝 NOTE:
Large binaries (.exe 61MB) excluded from git.
Use GitHub Releases for distributing executables.
Web version is lightweight and ready to play!

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
+# build/ - COMMENTED: We want build/ in GitHub for web/windows builds!
 develop-eggs/
-dist/
+# dist/ - COMMENTED: We want dist/ in GitHub for executables!
 downloads/
 eggs/
 .eggs/
@@ -43,5 +43,12 @@ bin/
 .DS_Store
 Thumbs.db
 
-# Build cache
-build/web-cache/
+# Build cache - only ignore cache, not the actual builds
+# build/web-cache/ - ALLOW web-cache too for consistency
+
+# Large binaries (executables and packages > 10MB should use GitHub Releases)
+build/windows/**/*.pkg
+build/windows/**/*.pyz
+build/windows/**/*.zip
+dist/windows/ModernFlappyBird
+dist/**/*.exe
